# OVRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile.bat
backupsource/src/: Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
documentation/: ClassHierarchy.dia~
shaders/: simple_shader.frag  simple_shader.vert
src/: App.cpp  App.h  AppWindow.cpp  AppWindow.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  engine_config.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  ovr_camera.cpp  ovr_camera.h  ovr_device.cpp  ovr_device.h  ovr_game_object.cpp  ovr_game_object.h  ovr_image.cpp  ovr_image.h  ovr_model.cpp  ovr_model.h  ovr_pipeline.cpp  ovr_pipeline.h  ovr_renderer.cpp  ovr_renderer.h  ovr_swap_chain.cpp  ovr_swap_chain.h  ovr_utils.h  simple_render_system.cpp  simple_render_system.h
src/utils/: resource_loader.cpp  resource_loader.h
